@@ -12,6 +12,7 @@ repositories {
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	testImplementation platform("org.junit:junit-bom:5.12.2")
 	testImplementation "org.junit.jupiter:junit-jupiter"
@@ -20,16 +21,7 @@ dependencies {
 }
 
 loom {
-	runs {
-		configureEach {
-			vmArg "-ea"
-			vmArg "-XX:+UseZGC"
-		}
-
-		client {
-			vmArg "-Xmx4G"
-		}
-	}
+	accessWidenerPath = file("src/main/resources/mapple.accesswidener")
 }
 
 test {
